fix(menu): section heading top and bottom spacing
When a section heading was above menu items, it previously looked
strange because of the lack of space. The sectionHeading also needs
top and bottom padding.

--- a/components/menu/index.css
+++ b/components/menu/index.css
@@ -663,6 +663,8 @@ governing permissions and limitations under the License.
   font-weight: var(--mod-menu-section-header-font-weight, var(--spectrum-menu-section-header-font-weight));
   line-height: var(--mod-menu-section-header-line-height, var(--spectrum-menu-section-header-line-height));
   min-inline-size: var(--mod-menu-section-header-min-width, var(--spectrum-menu-section-header-min-width));
+  padding-block-start: var(--mod-menu-section-header-top-edge-to-text, var(--mod-menu-item-top-edge-to-text, var(--spectrum-menu-item-top-edge-to-text)));
+  padding-block-end: var(--mod-menu-section-header-bottom-edge-to-text, var(--mod-menu-item-bottom-edge-to-text, var(--spectrum-menu-item-bottom-edge-to-text)));
 }
 
 /* collapsible sub-menus */
